--- a/src/newLanding.css
+++ b/src/newLanding.css
@@ -306,6 +306,16 @@
     padding: clamp(24px, 5vw, 48px) 24px;
   }
   
+  /* Remove side spaces on large and extra-large screens */
+  @media (min-width: 1024px) {
+    .landing main { padding-left: 0; padding-right: 0; }
+    .container { width: 100%; margin-inline: 0; padding-inline: 0; }
+  }
+  @media (min-width: 1280px) {
+    .landing main { padding-left: 0; padding-right: 0; }
+    .container { width: 100%; margin-inline: 0; padding-inline: 0; }
+  }
+  
   /* Countdown: similar look to previous design */
   .countdown {
     display: grid;
